--- a/station/yotsukaido.html
+++ b/station/yotsukaido.html
@@ -41,7 +41,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png" alt="四街道駅">
           <div class="platform">
             <h2>0番線 -総武本線上下</h2>
-            <p>JRE-IKST-039-01(首都圏34-1番) 〈変更前〉</p>
+            <p>JRE-IKST-039-01(首都圏34-1番)</p>
           </div>
           <a href="../platform/yotsukaido_0.html"></a>
         </div>
@@ -49,17 +49,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png" alt="四街道駅">
           <div class="platform">
             <h2>1番線 -総武本線下り</h2>
-            <p>JRE-IKST-039-01(首都圏34-1番) 【未収録】</p>
+            <p>JRE-IKST-039-01(首都圏34-1番)</p>
           </div>
-<!--           <a href="../platform/yotsukaido_1.html"></a> -->
+          <a href="../platform/yotsukaido_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eda8466e8eeb4b039cd05f3e0d11bf8c~mv2.png" alt="四街道駅">
           <div class="platform">
             <h2>2番線 -総武本線上り</h2>
-            <p>JRE-IKST-039-02(首都圏34-2番) 【未収録】</p>
+            <p>JRE-IKST-039-02(首都圏34-2番)</p>
           </div>
-<!--           <a href="../platform/yotsukaido_2.html"></a> -->
+          <a href="../platform/yotsukaido_2.html"></a>
         </div>
       </div>
   </div>
