--- a/thanks.html
+++ b/thanks.html
@@ -210,6 +210,10 @@
             <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
           </tr>         
           <tr>
+            <td>相鉄新横浜線</td>
+            <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
+          </tr>         
+          <tr>
             <td>上越新幹線</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
           </tr>    
