--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/2/13 新潟駅(新幹線) メロディ変更",
+            "2026/2/16 花巻駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
