--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
       <script>
         const messages = [
           {
+            text: "【機能追加】2026.2.16 実機スイッチ対応開始",
+            url: null
+          },
+          {
             text: "【機能追加】2026.2.11 ここからステーションベル 新路線追加：京葉線",
             url: "https://ssmn93.github.io/depart-melody/locate.html"
           },
