--- a/jre.html
+++ b/jre.html
@@ -295,6 +295,14 @@
             <p>上越線</p>
           </div>
           <a href="line/joetsu.html"></a>
+        </div>    
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/信越線.jpg" alt="信越線">
+          <div class="line">
+<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
+            <p>信越本線</p>
+          </div>
+          <a href="line/shinetsu.html"></a>
         </div>  
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/両毛線.jpg" alt="仙石線">
@@ -320,6 +328,8 @@
           </div>
           <a href="line/senseki.html"></a>
         </div>  
+      </div>
+      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/北陸新幹線.jpg" alt="北陸新幹線">
           <div class="line">
@@ -328,8 +338,6 @@
           </div>
           <a href="line/hokuriku_shinkansen.html"></a>
         </div>    
-      </div>
-      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/上越新幹線.jpg" alt="上越新幹線">
           <div class="line">
@@ -347,14 +355,6 @@
           <a href="line/tohoku_shinkansen.html"></a>
         </div>   
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
-          <div class="line">
-<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
-            <p>山形新幹線</p>
-          </div>
-          <a href="line/yamagata_shinkansen.html"></a>
-        </div>    
-        <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
           <div class="line">
 <!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
