--- a/thanks.html
+++ b/thanks.html
@@ -2366,6 +2366,14 @@
             <td>4点チャイム(大阪メトロ中央線西行)</td>
             <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
           </tr>
+          <tr>
+            <td>首都圏25番</td>
+            <td>□@様</td>
+          </tr>
+          <tr>
+            <td>首都圏25-1番</td>
+            <td>□@様</td>
+          </tr>
         </tbody>
       </table>
     </div>
