--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
             url: null
           },
           {
-            text: "【機能追加】2026.2.11 ここからステーションベル 新路線追加：京葉線",
-            url: "https://ssmn93.github.io/depart-melody/locate.html"
+            text: "【ページ追加】2026.2.17 信越本線・同線等 安中駅･#1･#3･#1(旧)･#3(旧)・横川駅･#1･#3･#1(旧)･#3(旧)",
+            url: null
           },
           {
-            text: "【ページ追加】2026.2.11 京葉線 全駅追加完了：南船橋駅 #1~#4･#1(旧)~#3(旧)・検見川浜駅 #2・稲毛海岸駅･#1･#2･#1(旧)･#2(旧)・千葉みなと駅･#1~#3･#1(旧)~#3(旧)・新浦安駅･#1~#4･#1(旧)~#4(旧)・新習志野駅･#1~#4･#1(旧)~#4(旧)・常磐線等 いわき駅 #2(旧)",
-            url: null
+            text: "【機能追加】2026.2.11 ここからステーションベル 新路線追加：京葉線",
+            url: "https://ssmn93.github.io/depart-melody/locate.html"
           },
           {
             text: "【機能追加】2026.2.1 トップページBGM継続使用：2026年2月限定曲「首都圏22番 アレンジver_V2」",
