--- a/thanks.html
+++ b/thanks.html
@@ -2368,11 +2368,11 @@
           </tr>
           <tr>
             <td>首都圏25番</td>
-            <td>□@様</td>
+            <td>Source様</td>
           </tr>
           <tr>
             <td>首都圏25-1番</td>
-            <td>□@様</td>
+            <td>Source様</td>
           </tr>
         </tbody>
       </table>
