--- a/platform/yotsukaido_1.html
+++ b/platform/yotsukaido_1.html
@@ -173,7 +173,7 @@
       <div class="arrange">
         <div class="content">
           <h1>四街道駅 1番線「JRE-IKST-039-01(首都圏34-1番)」</h1>
-          <p>収録駅:君津駅1番線</p>
+          <p>収録駅:成東駅1番線</p>
           <p>スピーカー:小丸VOSS(四街道)</p>
         
         </div>
