--- a/search.html
+++ b/search.html
@@ -52,7 +52,7 @@
             <td><a href="../depart-melody/melody/あゝ上野駅.html">あゝ上野駅</a></td>
             <td>ああうえのえき</td>
             <td>-</td>
-            <td>上野#16･#17</td>
+            <td>上野#16<br>上野#17</td>
           </tr>
           <tr>
             <td>ああ わが戸田市</td>
@@ -61,79 +61,79 @@
             <td>戸田公園#1<br>戸田#1<br>北戸田1</td>
           </tr>
           <tr>
-            <td>青空と線路</td>
+            <td><a href="../depart-melody/platform/kofu_1_o.html">青空と線路</a></td>
             <td>あおぞらとせんろ</td>
             <td>-</td>
-            <td>甲府#1</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>上尾市歌 verA</td>
+            <td><a href="../depart-melody/platform/kitaageo_1.html">上尾市歌 verA</a></td>
             <td>あげおしか verA</td>
             <td>-</td>
-            <td>北上尾</td>
+            <td>北上尾#1<br>北上尾#2</td>
           </tr>
           <tr>
-            <td>上尾市歌 verB</td>
+            <td><a href="../depart-melody/platform/ageo_1.html">上尾市歌 verB</a></td>
             <td>あげおしか verB</td>
             <td>-</td>
-            <td>上尾</td>
+            <td>上尾#1<br>上尾#2<br>上尾#3</td>
           </tr>
           <tr>
             <td>朝つゆ</td>
             <td>あさつゆ</td>
             <td>近郊地域85番</td>
-            <td>市川#2</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>朝の教会</td>
+            <td<a href="../depart-melody/platform/awakamogawa_1_o.html">朝の教会</</td>
             <td>あさのきょうかい</td>
             <td>スタートアップA</td>
-            <td>安房鴨川#1</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>朝の静けさ</td>
+            <td><a href="../depart-melody/platform/haijima_3.html">朝の静けさ</td>
             <td>あさのしずけさ</td>
             <td>近郊地域54番</td>
-            <td>熊川<br>東秋留<br>秋川 ...etc</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>朝のドヴィッシー</td>
+            <td><a href="../depart-melody/platform/makuhari_2_o.html">朝のドヴィッシー</a></td>
             <td>あさのどゔぃっしー</td>
             <td>近郊地域104番</td>
-            <td>幕張#2</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>あざみ野V1</td>
+            <td><a href="../depart-melody/platform/katsunumabudokyo_1_o.html">あざみ野V1</a></td>
             <td>あざみのV1</td>
             <td>近郊地域42-1番</td>
-            <td>勝沼ぶどう郷#1</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>あざみ野V2</td>
+            <td><a href="../depart-melody/platform/oku_1.html">あざみ野V2</a></td>
             <td>あざみのV2</td>
             <td>近郊地域42番</td>
             <td>尾久#1</td>
           </tr>
           <tr>
-            <td>明日があるさ</td>
+            <td><a href="../depart-melody/platform/tomobe_2.html">明日があるさ</a></td>
             <td>あしたがあるさ</td>
             <td>-</td>
             <td>友部#2</td>
           </tr>
-          <tr>
-            <td>あしたの風とひとつになって verA</td>
+          <tr>\
+            <td><a href="../depart-melody/platform/takahagi_1_d.html">あしたの風とひとつになって verA</a></td>
             <td>あしたのかぜとひとつになって verA</td>
             <td>-</td>
             <td>高萩#1</td>
           </tr>
           <tr>
-            <td>あしたの風とひとつになって verB</td>
+            <td><a href="../depart-melody/platform/takahagi_1_u.html">あしたの風とひとつになって verB</a></td>
             <td>あしたのかぜとひとつになって verB</td>
             <td>-</td>
-            <td>高萩#1･#2</td>
+            <td>高萩#1<br>高萩#2</td>
           </tr>
           <tr>
-            <td>明日は咲こう花咲こう</td>
+            <td><a href="../depart-melody/platform/ogitsu_1.html">明日は咲こう花咲こう</a></td>
             <td>あしたはさこうはなさこう</td>
             <td>-</td>
             <td>小木津#1</td>
@@ -169,22 +169,22 @@
             <td>白岡#1･#2<br>新白岡#1<br>久喜#1･#2</td>
           </tr>
           <tr>
-            <td>雨のステイション verB</td>
+            <td><a href="../depart-melody/platform/nishitachikawa_2_o.html">雨のステイション verB</a></td>
             <td>あめのすていしょん verB</td>
             <td>-</td>
-            <td>西立川#2</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>雨のステイション verC</td>
+            <td><a href="../depart-melody/platform/nishitachikawa_1_o.html">雨のステイション verC</a></td>
             <td>あめのすていしょん verC</td>
             <td>-</td>
-            <td>西立川#1</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>淡い恋心</td>
+            <td><a href="../depart-melody/platform/musashikosugi_3_o.html">淡い恋心</a></td>
             <td>あわいこいごころ</td>
             <td>-</td>
-            <td>なし</td>
+            <td>-</td>
           </tr>
           <tr>
             <td>阿波踊り verA</td>
@@ -211,31 +211,31 @@
             <td>高円寺#2</td>
           </tr>
           <tr>
-            <td>石岡のお囃子</td>
+            <td><a href="../depart-melody/platform/ishioka_3.html">石岡のお囃子</a></td>
             <td>いしおかのおはやし</td>
             <td>-</td>
             <td>石岡#3</td>
           </tr>
           <tr>
-            <td>一番星みつけた verA</td>
+            <td><a href="../depart-melody/platform/nishikokubunji_1.html">一番星みつけた verA</a></td>
             <td>いちばんぼしみつけた verA</td>
             <td>-</td>
             <td>西国分寺#1</td>
           </tr>
           <tr>
-            <td>一番星みつけた verB</td>
+            <td><a href="../depart-melody/platform/nishikokubunji_2.html">一番星みつけた verB</a></td>
             <td>いちばんぼしみつけた verB</td>
             <td>-</td>
-            <td>西国分寺#1</td>
+            <td>西国分寺#2</td>
           </tr>
           <tr>
-            <td>いつでも夢をV1</td>
+            <td><a href="../depart-melody/platform/omika_1.html">いつでも夢をV1</a></td>
             <td>いつでもゆめをV1</td>
             <td>-</td>
-            <td>大甕#1<br>常陸多賀#2･#3<br>日立#3</td>
+            <td>大甕#1<br>常陸多賀#2<br>など</td>
           </tr>
           <tr>
-            <td>いつでも夢をV2</td>
+            <td><a href="../depart-melody/platform/ogitsu_2.html">いつでも夢をV2</a></td>
             <td>いつでもゆめをV2</td>
             <td>-</td>
             <td>小木津#2<br>十王#1</td>
@@ -256,13 +256,13 @@
             <td><a href="../depart-melody/melody/稲城繁盛節_Aver.html">稲城繁盛節 Aver</a></td>
             <td>いなぎはんじょうぶし Aver</td>
             <td>-</td>
-            <td>【消滅済】</td>
+            <td>-</td>
           </tr>
           <tr>
             <td><a href="../depart-melody/melody/稲城繁盛節_Bver.html">稲城繁盛節 Bver</a></td>
             <td>いなぎはんじょうぶし Bver</td>
             <td>-</td>
-            <td>【消滅済】</td>
+            <td>-</td>
           </tr>
           <tr>
             <td>上を向いて歩こう Aver</td>
@@ -277,7 +277,7 @@
             <td>川崎#2</td>
           </tr>
           <tr>
-            <td>上を向いて歩こう 友部ver</td>
+            <td><a href="../depart-melody/platform/tomobe_1.html">上を向いて歩こう 友部ver</a></td>
             <td>うえをむいてあるこう ともべver</td>
             <td>-</td>
             <td>友部#1</td>
@@ -295,7 +295,7 @@
             <td>京急川崎#6･#7</td>
           </tr>
           <tr>
-            <td>雅楽谷の森 〜蓮田のタカラ〜 V1</td>
+            <td><a href="../depart-melody/platform/hasuda_1.html">雅楽谷の森 〜蓮田のタカラ〜 V1</a></td>
             <td>うたやのもり 〜はすだのたから〜 V1</td>
             <td>-</td>
             <td>蓮田#1</td>
@@ -304,31 +304,31 @@
             <td>雅楽谷の森 〜蓮田のタカラ〜 V2</td>
             <td>うたやのもり 〜はすだのたから〜 V2</td>
             <td>-</td>
-            <td>蓮田#2</td>
+            <td>蓮田#2<br>蓮田#3</td>
           </tr>
           <tr>
-            <td>美しき丘</td>
+            <td><a href="../depart-melody/platform/tachikawa_6_o.html">美しき丘</a></td>
             <td>うつくしきおか</td>
             <td>近郊地域55番</td>
-            <td>袖ケ浦#1<br>潮見#2<br>稲毛海岸#2 …etc</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>うなりくん なう！</td>
+            <td><a href="../depart-melody/platform/narita_1.html">うなりくん なう！</a></td>
             <td>-</td>
             <td>-</td>
             <td>成田#1</td>
           </tr>
           <tr>
-            <td>海 その愛 Aver</td>
+            <td><a href="../depart-melody/platform/chigasaki_1.html">海 その愛 Aver</a></td>
             <td>うみ そのあい Aver</td>
             <td>-</td>
-            <td>【消滅済】</td>
+            <td>-</td>
           </tr>
           <tr>
-            <td>海 その愛 Bver</td>
+            <td><a href="../depart-melody/platform/chigasaki_2.html">海 その愛 Bver</a></td>
             <td>うみ そのあい Bver</td>
             <td>-</td>
-            <td>【消滅済】</td>
+            <td>-</td>
           </tr>
           <tr>
             <td><a href="../depart-melody/melody/海の駅.html">海の駅</a></td>
@@ -337,10 +337,10 @@
             <td>軽井沢</td>
           </tr>
           <tr>
-            <td>海辺の散歩</td>
+            <td><a href="../depart-melody/platform/sano_2_o1.html">海辺の散歩</a></td>
             <td>うみべのさんぽ</td>
             <td>近郊地域73番</td>
-            <td>葛西臨海公園#1<br>佐野#2</td>
+            <td>-</td>
           </tr>
           <tr>
             <td>栄冠は君に輝く</td>
