--- a/search.html
+++ b/search.html
@@ -85,7 +85,7 @@
             <td>-</td>
           </tr>
           <tr>
-            <td<a href="../depart-melody/platform/awakamogawa_1_o.html">朝の教会</</td>
+            <td<a href="../depart-melody/platform/awakamogawa_1_o.html">朝の教会</td>
             <td>あさのきょうかい</td>
             <td>スタートアップA</td>
             <td>-</td>
