--- a/line/sobu_rapid.html
+++ b/line/sobu_rapid.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_64feddbe5b4149c9822ee4e3a08c2451~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_64feddbe5b4149c9822ee4e3a08c2451~mv2.png" alt="船橋駅">
-          <p>船橋駅 【未収録】</p>
-<!--           <a href="../station/funabashi.html"></a> -->
+          <p>船橋駅</p>
+          <a href="../station/funabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_243f761987fa428fad89664cb16ce2db~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_243f761987fa428fad89664cb16ce2db~mv2.png" alt="津田沼駅">
