--- a/platform/ueno_3.html
+++ b/platform/ueno_3.html
@@ -176,8 +176,12 @@
           <p>収録駅:東京駅5番線</p>
           <p>スピーカー:JVC横長型(上野)</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="ueno_3.html">JRE-IKST-010-02(首都圏11-1番)</option>
+          <option value="ueno_3_o1.html">ベル</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
