--- a/platform/ueno_7.html
+++ b/platform/ueno_7.html
@@ -176,8 +176,12 @@
           <p>収録駅:横浜駅6番線</p>
           <p>スピーカー:JVC横長型・天井型(上野)</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="ueno_7.html">JRE-IKST-021-02(首都圏3番)</option>
+          <option value="ueno_7_o1.html">くるみあそび</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
