--- a/platform/ueno_8.html
+++ b/platform/ueno_8.html
@@ -176,8 +176,12 @@
           <p>収録駅:上野駅8番線</p>
           <p>スピーカー:JVC横長型・天井型</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="ueno_8.html">JRE-IKST-020-01(首都圏21番)</option>
+          <option value="ueno_8_o1.html">瞬く街並み</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
