Update and rename ikebukuro_ti5.html to ikebukuro_si5.html

--- a/platform/ikebukuro_si5.html
+++ b/platform/ikebukuro_si5.html
@@ -68,7 +68,7 @@
           
           <h1>池袋駅 5番線「曲名不明(西武メロディ3)」</h1>
           <p>収録駅:狭山ヶ丘駅1番線</p>
-          <p>スピーカー:BOSE</p>
+          <p>スピーカー:BOSE(池袋)</p>
           
           <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
