--- a/station/ikebukuro.html
+++ b/station/ikebukuro.html
@@ -201,17 +201,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>2番線 -西武池袋線下り</h2>
-            <p>曲名不明(西武メロディ3) 【未収録】</p>
+            <p>曲名不明(西武メロディ3)</p>
           </div>
-          <!-- <a href="../platform/ikebukuro_si2.html"></a> -->
+          <a href="../platform/ikebukuro_si2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>3番線 -西武池袋線下り</h2>
-            <p>曲名不明(西武メロディ3) 【未収録】</p>
+            <p>曲名不明(西武メロディ3)</p>
           </div>
-          <!-- <a href="../platform/ikebukuro_si3.html"></a> -->
+          <a href="../platform/ikebukuro_si3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
@@ -225,9 +225,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>5番線 -西武池袋線下り</h2>
-            <p>曲名不明(西武メロディ3) 【未収録】</p>
+            <p>曲名不明(西武メロディ3)</p>
           </div>
-<!--           <a href="../platform/ikebukuro_si5.html"></a> -->
+          <a href="../platform/ikebukuro_si5.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
@@ -241,17 +241,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>7番線 -西武池袋線下り</h2>
-            <p>曲名不明(西武メロディ3) 【未収録】</p>
+            <p>曲名不明(西武メロディ3)</p>
           </div>
-<!--           <a href="../platform/ikebukuro_si7.html"></a> -->
+          <a href="../platform/ikebukuro_si7.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
           <div class="platform">
             <h2>特急専用 -西武池袋線下り特急</h2>
-            <p>曲名不明(西武メロディ6) 【未収録】</p>
+            <p>曲名不明(西武メロディ6)</p>
           </div>
-<!--           <a href="../platform/ikebukuro_sili.html"></a> -->
+          <a href="../platform/ikebukuro_sili.html"></a>
         </div>
       </div>
   </div>
