--- a/thanks.html
+++ b/thanks.html
@@ -2374,6 +2374,14 @@
             <td>首都圏25-1番</td>
             <td>Source様</td>
           </tr>
+          <tr>
+            <td>西武メロディ3</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>          
+          <tr>
+            <td>西武メロディ6</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>          
         </tbody>
       </table>
     </div>
