--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       <script>
         const messages = [
           {
-            text: "【機能追加】2026.2.16 実機スイッチ対応開始",
+            text: "【ページ追加】2026.2.22 西武池袋線等 池袋駅 #2(西武)~#特急専用(西武)",
             url: null
           },
           {
-            text: "【ページ追加】2026.2.17 信越本線・同線等 安中駅･#1･#3･#1(旧)･#3(旧)・横川駅･#1･#3･#1(旧)･#3(旧)",
+            text: "【機能追加】2026.2.16 実機スイッチ対応開始",
             url: null
           },
           {
