--- a/line/seibu_chichibu.html
+++ b/line/seibu_chichibu.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_336553019eec4b0b81d9776ca676f142~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_336553019eec4b0b81d9776ca676f142~mv2.png" alt="西武秩父駅">
-          <p>西武秩父駅 【未収録】</p>
-          <!-- <a href="../station/seibu_chichibu.html"></a> -->
+          <p>西武秩父駅</p>
+          <a href="../station/seibu_chichibu.html"></a>
         </div>
       </div>
   </div>
