--- a/thanks.html
+++ b/thanks.html
@@ -628,7 +628,7 @@
           </tr>
           <tr>
             <td>信濃の国</td>
-            <td><a href="https://x.com/i/user/1680210079776374785">ホームドア様</a></td>
+            <td><a href="https://www.youtube.com/@iden_189">I電様</a></td>
           </tr>
           <tr>
             <td>首都圏16番</td>
