--- a/line/seibu_shinjuku.html
+++ b/line/seibu_shinjuku.html
@@ -165,8 +165,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_8bd50c5ebacf462481855421e4ab9de9~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8bd50c5ebacf462481855421e4ab9de9~mv2.png" alt="狭山市駅">
-          <p>狭山市駅 【未収録】</p>
-          <!-- <a href="../station/sayamashi.html"></a> -->
+          <p>狭山市駅</p>
+          <a href="../station/sayamashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7756c22c06c5404f8ee43431213ef5ea~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7756c22c06c5404f8ee43431213ef5ea~mv2.png" alt="新狭山駅">
@@ -180,8 +180,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png" alt="本川越駅">
-          <p>本川越駅 【未収録】</p>
-          <!-- <a href="../station/honkawagoe.html"></a> -->
+          <p>本川越駅</p>
+          <a href="../station/honkawagoe.html"></a>
         </div>
       </div>
   </div>
