--- a/line/seibu_toshima.html
+++ b/line/seibu_toshima.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4327c807361346418446f06a5f3c926f~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4327c807361346418446f06a5f3c926f~mv2.png" alt="練馬駅">
-          <p>練馬駅 【未収録】</p>
-          <!-- <a href="../station/nerima.html"></a> -->
+          <p>練馬駅</p>
+          <a href="../station/nerima.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bd9e09cfc96440308b0c0b268fdb83b0~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bd9e09cfc96440308b0c0b268fdb83b0~mv2.png" alt="豊島園駅">
