--- a/line/seibu_yurakucho.html
+++ b/line/seibu_yurakucho.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4327c807361346418446f06a5f3c926f~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4327c807361346418446f06a5f3c926f~mv2.png" alt="練馬駅">
-          <p>練馬駅 【未収録】</p>
-          <!-- <a href="../station/nerima.html"></a> -->
+          <p>練馬駅</p>
+          <a href="../station/nerima.html"></a>
         </div>
       </div>
   </div>
