--- a/line/seibu_seibuen.html
+++ b/line/seibu_seibuen.html
@@ -7,14 +7,14 @@
   <meta name="description" content="このサイトでは、発車メロディを再現することができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
-  <link rel="stylesheet" href="seibu_ikebukuro.css">
+  <link rel="stylesheet" href="seibu_seibuen.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="このサイトでは、発車メロディを再現することができます！">
-  <meta property="og:title" content="西武池袋線｜どこでもステーションベル">
+  <meta property="og:title" content="西武西武園線｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="西武池袋線｜どこでもステーションベル">
-  <title>西武池袋線｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="西武西武園線｜どこでもステーションベル">
+  <title>西武西武園線｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -33,7 +33,7 @@
   </header>
     <div class="background-image">
       <div class="content">
-        <h1>西武池袋線</h1>
+        <h1>西武西武園線</h1>
       </div>
     </div>
     <div class="main">
