--- a/station/musashisakai.html
+++ b/station/musashisakai.html
@@ -58,9 +58,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_8304b9737c634efc8cec64ce17040222~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8304b9737c634efc8cec64ce17040222~mv2.png" alt="武蔵境駅">
           <div class="platform">
             <h2>3番線 -西武多摩川線下り</h2>
-            <p>曲名不明 【未収録】</p>
+            <p>オリジナル曲(武蔵境A)</p>
           </div>
-          <!-- <a href="../platform/musashisakai_3.html"></a> -->
+          <a href="../platform/musashisakai_sw3.html"></a>
         </div>
       </div>
   </div>
