--- a/thanks.html
+++ b/thanks.html
@@ -2382,6 +2382,10 @@
             <td>西武メロディ6</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
           </tr>          
+          <tr>
+            <td>オリジナル曲(武蔵境A)</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>          
         </tbody>
       </table>
     </div>
