--- a/station/koremasa.html
+++ b/station/koremasa.html
@@ -41,10 +41,10 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2da585565f89445ea307440fe5dc2c50~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2da585565f89445ea307440fe5dc2c50~mv2.png" alt="是政駅">
           <div class="platform">
-            <h2>1番線 -西武多摩川線上り</h2>
+            <h2>西武多摩川線上り</h2>
             <p>オリジナル曲(是政A)</p>
           </div>
-          <a href="../platform/koremasa_1.html"></a>
+          <a href="../platform/koremasa.html"></a>
         </div>
       </div>
   </div>
