--- a/thanks.html
+++ b/thanks.html
@@ -217,6 +217,18 @@
             <td>上越新幹線</td>
             <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
           </tr>    
+          <tr>
+            <td>4点チャイム(大阪メトロ中央線西行)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>    
+          <tr>
+            <td>西武池袋線</td>
+            <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
+          </tr>   
+          <tr>
+            <td>西武多摩川線</td>
+            <td><a href="https://x.com/i/user/1838830591661514752">北多磨様</a></td>
+          </tr>  
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
