--- a/line/seibu_tamagawa.html
+++ b/line/seibu_tamagawa.html
@@ -45,23 +45,13 @@
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png" alt="椎名町駅"> -->
-          <p>【新小金井駅･多磨駅 音声なし】</p>
+          <p>【新小金井駅-競艇場前駅 音声なし】</p>
           <!-- <a href="../station/shinkoganei.html"></a> -->
         </div>
         <div class="column">
-          <img src="https://static.wixstatic.com/media/0acb38_19798cf6bf2840c6a9f70f4af89139f4~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_19798cf6bf2840c6a9f70f4af89139f4~mv2.png" alt="白糸台駅">
-          <p>白糸台駅 【未収録】</p>
-          <!-- <a href="../station/shiraitodai.html"></a> -->
-        </div>
-        <div class="column">
-          <!-- <img src="https://static.wixstatic.com/media/0acb38_10f8a3e2d1064c439bed5aa2c8f7a119~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_10f8a3e2d1064c439bed5aa2c8f7a119~mv2.png" alt="江古田駅"> -->
-          <p>【競艇場前駅 音声なし】</p>
-          <!-- <a href="../station/kyoteijomae.html"></a> -->
-        </div>
-        <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2da585565f89445ea307440fe5dc2c50~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2da585565f89445ea307440fe5dc2c50~mv2.png" alt="是政駅">
-          <p>是政駅 【未収録】</p>
-          <!-- <a href="../station/koremasa.html"></a> -->
+          <p>是政駅</p>
+          <a href="../station/koremasa.html"></a>
         </div>
       </div>
   </div>
