--- a/line/seibu_ikebukuro.html
+++ b/line/seibu_ikebukuro.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png" alt="椎名町駅">
-          <p>椎名町駅 【未収録】</p>
-          <!-- <a href="../station/shiinamachi.html"></a> -->
+          <p>椎名町駅</p>
+          <a href="../station/shiinamachi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0e2a0116aca847128e4c24f05b4fe583~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0e2a0116aca847128e4c24f05b4fe583~mv2.png" alt="東長崎駅">
@@ -110,8 +110,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1925041453cc4781ba4ffae6dc40c920~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1925041453cc4781ba4ffae6dc40c920~mv2.png" alt="清瀬駅">
-          <p>清瀬駅 【未収録】</p>
-<!--           <a href="../station/kiyose.html"></a> -->
+          <p>清瀬駅</p>
+          <a href="../station/kiyose.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1cd93c76ca7f4d3c95beaeff86d06277~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1cd93c76ca7f4d3c95beaeff86d06277~mv2.png" alt="秋津駅">
