--- a/line/seibu_shinjuku.html
+++ b/line/seibu_shinjuku.html
@@ -95,8 +95,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_cd3a5923f06548f395caad522acca678~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_cd3a5923f06548f395caad522acca678~mv2.png" alt="上井草駅">
-          <p>上井草駅 【未収録】</p>
-<!--           <a href="../station/kamiigusa.html"></a> -->
+          <p>上井草駅</p>
+          <a href="../station/kamiigusa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e2cab725b5df41bbb7ab428aece242a4~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e2cab725b5df41bbb7ab428aece242a4~mv2.png" alt="上石神井駅">
@@ -145,8 +145,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7532982cfe9041b39203bc3a3717b406~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7532982cfe9041b39203bc3a3717b406~mv2.png" alt="所沢駅">
-          <p>所沢駅 【未収録】</p>
-          <!-- <a href="../station/tokorozawa.html"></a> -->
+          <p>所沢駅</p>
+          <a href="../station/tokorozawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_169be57234b94c889c5102773363dd18~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_169be57234b94c889c5102773363dd18~mv2.png" alt="航空公園駅">
