--- a/line/seibu_shinjuku.html
+++ b/line/seibu_shinjuku.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_09d96c219b8f4217977b9a946daa906c~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_09d96c219b8f4217977b9a946daa906c~mv2.png" alt="高田馬場駅">
-          <p>高田馬場駅 【未収録】</p>
-          <!-- <a href="../station/takadanobaba.html"></a> -->
+          <p>高田馬場駅</p>
+          <a href="../station/takadanobaba.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e25fdf100b2f485eb577877ce95cc88e~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e25fdf100b2f485eb577877ce95cc88e~mv2.png" alt="下落合駅">
