--- a/line/seibu_ikebukuro.html
+++ b/line/seibu_ikebukuro.html
@@ -120,8 +120,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0c66c5e9b7b74aa0ad7d4a353d7e4798~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0c66c5e9b7b74aa0ad7d4a353d7e4798~mv2.png" alt="所沢駅">
-          <p>所沢駅 【未収録】</p>
-          <!-- <a href="../station/tokorozawa.html"></a> -->
+          <p>所沢駅</p>
+          <a href="../station/tokorozawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_351e4ffff50846aaa3f0074876f2af87~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_351e4ffff50846aaa3f0074876f2af87~mv2.png" alt="西所沢駅">
@@ -150,8 +150,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6196bd0bd6fd4e9095c05d315eda9d94~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6196bd0bd6fd4e9095c05d315eda9d94~mv2.png" alt="入間市駅">
-          <p>入間市駅 【未収録】</p>
-          <!-- <a href="../station/irumashi.html"></a> -->
+          <p>入間市駅</p>
+          <a href="../station/irumashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_8c7f1ca4b16d4844acfb9fb3c58c5dc2~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8c7f1ca4b16d4844acfb9fb3c58c5dc2~mv2.png" alt="仏子駅">
