--- a/station/sakura.html
+++ b/station/sakura.html
@@ -42,7 +42,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_8be193e338914a768c59f31fb8457170~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8be193e338914a768c59f31fb8457170~mv2.png" alt="大崎駅">
           <div class="platform">
             <h2>1番線 -総武本線下り</h2>
-            <p>蝶々のように</p>
+            <p>JRE-IKST-039-02(首都圏34-2番) 〈変更前〉</p>
           </div>
           <a href="../platform/sakura_1.html"></a>
         </div>
@@ -50,7 +50,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_8be193e338914a768c59f31fb8457170~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8be193e338914a768c59f31fb8457170~mv2.png" alt="大崎駅">
           <div class="platform">
             <h2>2番線 -総武本線・成田線上下</h2>
-            <p>Verde Rayo V2</p>
+            <p>JRE-IKST-042-02(首都圏35-2番) 〈変更前〉</p>
           </div>
           <a href="../platform/sakura_2.html"></a>
         </div>
@@ -58,7 +58,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_8be193e338914a768c59f31fb8457170~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8be193e338914a768c59f31fb8457170~mv2.png" alt="大崎駅">
           <div class="platform">
             <h2>3番線 -総武本線上り</h2>
-            <p>ムーンストーン</p>
+            <p>JRE-IKST-042-01(首都圏35番) 〈変更前〉</p>
           </div>
           <a href="../platform/sakura_3.html"></a>
         </div>
@@ -66,7 +66,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_8be193e338914a768c59f31fb8457170~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8be193e338914a768c59f31fb8457170~mv2.png" alt="大崎駅">
           <div class="platform">
             <h2>4番線 -総武本線上り</h2>
-            <p>シーウィンド</p>
+            <p>JRE-IKST-039-01(首都圏34-1番) 〈変更前〉</p>
           </div>
           <a href="../platform/sakura_4.html"></a>
         </div>
