--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/2/18 北上駅 メロディ変更",
+            "2026/2/24 佐倉駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
