--- a/station/honkawagoe.html
+++ b/station/honkawagoe.html
@@ -42,7 +42,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png" alt="本川越駅">
           <div class="platform">
             <h2>1番線 -西武新宿線上り</h2>
-            <p>西武メロディー1</p>
+            <p>西武メロディ1</p>
           </div>
           <a href="../platform/honkawagoe_1.html"></a>
         </div>
@@ -58,7 +58,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a0b1f33e21464c5eac061bd4324aa0a3~mv2.png" alt="本川越駅">
           <div class="platform">
             <h2>4番線 -西武新宿線上り</h2>
-            <p>西武メロディー1</p>
+            <p>西武メロディ1</p>
           </div>
           <a href="../platform/honkawagoe_4.html"></a>
         </div>
