--- a/line/seibu_ikebukuro.html
+++ b/line/seibu_ikebukuro.html
@@ -80,8 +80,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_40b547f08fbb458190d409f752a98063~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_40b547f08fbb458190d409f752a98063~mv2.png" alt="練馬高野台駅">
-          <p>練馬高野台駅 【未収録】</p>
-          <!-- <a href="../station/nerimatakanodai.html"></a> -->
+          <p>練馬高野台駅</p>
+          <a href="../station/nerimatakanodai.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5e4a643345ad44419878d81d64d01cd3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5e4a643345ad44419878d81d64d01cd3~mv2.png" alt="石神井公園駅">
