--- a/line/seibu_sayama.html
+++ b/line/seibu_sayama.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_54d77dc28df649d891e674181d39380f~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_54d77dc28df649d891e674181d39380f~mv2.png" alt="下山口駅">
-          <p>下山口駅 【未収録】</p>
-          <!-- <a href="../station/shimoyamaguchi.html"></a> -->
+          <p>下山口駅</p>
+          <a href="../station/shimoyamaguchi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3399aa921a7f45c7b100eab908a724e5~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3399aa921a7f45c7b100eab908a724e5~mv2.png" alt="西武球場前駅">
