--- a/line/seibu_shinjuku.html
+++ b/line/seibu_shinjuku.html
@@ -140,8 +140,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3cd068d90e38433dbaa289d9588b5729~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3cd068d90e38433dbaa289d9588b5729~mv2.png" alt="東村山駅">
-          <p>東村山駅 【未収録】</p>
-          <!-- <a href="../station/higashimurayama.html"></a> -->
+          <p>東村山駅</p>
+          <a href="../station/higashimurayama.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7532982cfe9041b39203bc3a3717b406~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7532982cfe9041b39203bc3a3717b406~mv2.png" alt="所沢駅">
