--- a/line/seibu_haijima.html
+++ b/line/seibu_haijima.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bb5e021d045d4b32a1eb96fba534d406~mv2.png" alt="萩山駅">
-          <p>萩山駅 【未収録】</p>
-          <!-- <a href="../station/hagiyama.html"></a> -->
+          <p>萩山駅</p>
+          <a href="../station/hagiyama.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9ae74a199f5d4b78b6aa91018a665271~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9ae74a199f5d4b78b6aa91018a665271~mv2.png" alt="小川駅">
