--- a/line/seibu_tamako.html
+++ b/line/seibu_tamako.html
@@ -50,8 +50,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_245bae6ad0d348c09b80d54bc2afbb51~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_245bae6ad0d348c09b80d54bc2afbb51~mv2.png" alt="萩山駅">
-          <p>萩山駅 【未収録】</p>
-          <!-- <a href="../station/hagiyama.html"></a> -->
+          <p>萩山駅</p>
+          <a href="../station/hagiyama.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_3edf19c480c04575a831e1a010c7878e~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3edf19c480c04575a831e1a010c7878e~mv2.png" alt="桜台駅"> -->
@@ -60,8 +60,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3d3a74d80f3940f4b401926b82245437~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3d3a74d80f3940f4b401926b82245437~mv2.png" alt="多摩湖駅">
-          <p>多摩湖駅 【未収録】</p>
-          <!-- <a href="../station/tamako.html"></a> -->
+          <p>多摩湖駅</p>
+          <a href="../station/tamako.html"></a>
         </div>
       </div>
   </div>
