--- a/line/seibu_kokubunji.html
+++ b/line/seibu_kokubunji.html
@@ -60,8 +60,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_266a1be5108a41159cfffaf9725a7326~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_266a1be5108a41159cfffaf9725a7326~mv2.png" alt="東村山駅">
-          <p>東村山駅 【未収録】</p>
-          <!-- <a href="../station/higashimurayama.html"></a> -->
+          <p>東村山駅</p>
+          <a href="../station/higashimurayama.html"></a>
         </div>
       </div>
   </div>
