--- a/line/seibu_seibuen.html
+++ b/line/seibu_seibuen.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d01fe1ad479448883d3b14ab3d01b20~mv2.png" alt="池袋駅">
-          <p>東村山駅 【未収録】</p>
-          <!-- <a href="../station/higashimurayama.html"></a> -->
+          <p>東村山駅</p>
+          <a href="../station/higashimurayama.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7d548267b1d849258af510ac831c7f89~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7d548267b1d849258af510ac831c7f89~mv2.png" alt="西武園駅">
