--- a/line/seibu_yamaguchi.html
+++ b/line/seibu_yamaguchi.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_37e1fa1a4c1a4242a1dd16b1a75292d1~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_37e1fa1a4c1a4242a1dd16b1a75292d1~mv2.png" alt="多摩湖駅">
-          <p>多摩湖駅 【未収録】</p>
-          <!-- <a href="../station/tamako.html"></a> -->
+          <p>多摩湖駅</p>
+          <a href="../station/tamako.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_125cd55b51ad478ab08b0cbc2aff6ed3~mv2.png" alt="椎名町駅"> -->
